[metadata]
name = wg-memory
description = Game of memory
keywords = game, memory
version = attr: game.__version__
long_description = file: README.md
long_description_content_type = text/markdown
author = Uğur Çetin
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.10
project_urls =
    Source=https://github.com/jnmbk/wg-memory

[options]
packages =
    game
install_requires =
    Kivy>=2.1.0
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=4.0.1
    mypy>=0.950
    pytest>=7.1.2
    pytest-cov>=3.0.0
    tox>=3.25.0

[options.package_data]
game = py.typed

[flake8]
max-file-length = 160
